<resources>
    <string name="app_name">TimeWise</string>

    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="save_password">Save password</string>
    <string name="continue_text">Continue</string>

    <string name="welcome_to_timewise">Welcome to\nTimeWise!</string>

    <string name="cheer_up">Cheer Up</string>

    <string name="notes">Notes</string>
    <string name="add_note_text">Add note</string>

    <string name="add_alarm">Add alarm</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="enter_new_password_hint">Enter new password</string>
    <string name="confirm_password_hint">Confirm password</string>

    <string name="get_cat">Get a cat</string>
    <string name="get_quote">Get a quote</string>
    <string name="cheerup_page_text">Cheer up\n your mood!</string>

    <string name="change_appearance">Change appearance</string>
    <string name="change_language">Change language</string>
    <string name="enter_text">Enter text</string>
    <string name="title">Enter title</string>
    <string name="delete">Delete</string>

    <string name="one_more_btn_text">One more</string>
    <string name="back_btn_text">Back</string>

    <string name="text_of_quote">There is a text for quote</string>
    <string name="author_name">Author name</string>

    <string name="arg_alarm_obj">AlarmObject</string>
    <string name="bundle_alarm_obj">BundleAlarmObject</string>
    <string name="alarms">Alarms</string>
    <string name="set_alarm_time">Set Alarm Time</string>
    <string name="recurring_alarm">Recurring Alarm</string>
    <string name="schedule_alarm">Schedule Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="todo">TODO</string>

    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="display_task">DISPLAY TASK</string>
    <string name="add_task">Add Task</string>

    <string name="Monday">MON</string>
    <string name="Tuesday">TUE</string>
    <string name="Wednesday">WED</string>
    <string name="Thursday">THUR</string>
    <string name="Friday">FRI</string>
    <string name="Saturday">SAT</string>
    <string name="Sunday">SUN</string>

    <string name="MonthMessage">%s %d</string>

    <string name="enter_task_name">Enter Task Name:</string>
    <string name="set_time">Set Time</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="repeat">REPEAT</string>
    <string name="cancel">Cancel</string>
    <string name="submit">SUBMIT</string>
    <string name="task_name">Task Name</string>
    <string name="change_event">Edit Event</string>
    <string name="delete_event">Remove Event</string>
    <string name="repeat_for">Repeat for</string>
    <string name="days">Days.</string>
    <string name="months">Months.</string>
    <string name="years">Years.</string>
    <string name="weeks">Weeks.</string>
    <string name="reminder_5">set reminder 2 days before</string>
    <string name="reminder_4">set reminder 1 day before</string>
    <string name="reminder_3">set reminder 1 hour before</string>
    <string name="reminder_2">set reminder 30 min before</string>
    <string name="reminder_1">set reminder 5 min before</string>
    <string name="autostart_permission">Do you want to allow this app to have autostart Permissions? If not the app will not be able to function perfectly.</string>
    <string name="deny_permission">Deny</string>
    <string name="allow_permission">Give</string>
    <string name="dont_show_again_cb">Dont show again</string>
    <string name="repeating_event_edit">This is a repeating Event. Do you want to edit all Events or only this one?</string>
    <string name="repeating_event_remove">This is a repeating Event. Do you want to remove all Events or only this one?</string>
    <string name="remove_all_events">all Events</string>
    <string name="remove_only_this">this Event</string>
    <string name="edit_all_events">all Events</string>
    <string name="edit_only_this">this Event</string>

    <string name="yellow_orange_theme">yot</string>
    <string name="dark_theme">dt</string>
    <string name="choose_theme">Choose theme</string>
    <string name="switch_to_dark_theme">Switch to dark theme</string>
    <string name="switch_to_orange_yellow_theme">Switch to light theme</string>
    <string name="time">time</string>
    <string name="alarm_title">Alarm Title</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="alarm_sound">Alarm Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="snozz_off">Snozz off</string>
    <string name="flashlight">Flashlight</string>
    <string name="_90_charging">90% Charging</string>
    <string name="ring_ring">Ring Ring</string>
    <string name="change_password">Change password</string>
    <string name="title_text">Title</string>
    <string name="note_text">Note text</string>
    <string name="date">Date</string>
    <string name="choose_language">Choose language</string>

    <string name="confirm_password_dark">Please, confirm your password</string>
    <string name="theme_already_set_dark">You already have the Dark theme</string>
    <string name="theme_already_set_light">You already have the Light theme</string>

    <string name="english">English</string>
    <string name="rus">Русский</string>
</resources>